// Vitest Snapshot v1

exports[`modalManager > can open the archive modal 1`] = `
<div
  id="modal-container"
>
  <div
    class="_container_0360d7"
  >
    <div
      class="_content_0360d7"
    >
      <div
        class="_header_0360d7"
      >
        <h2
          class="_headerText_0360d7"
        >
          Archiv
        </h2>
        <button
          class="_button_7c1f96 _closeButton_0360d7"
          data-test="modalCloseButton"
        >
          <img
            class="_icon_7c1f96"
            src="/src/assets/close-icon.svg"
          />
        </button>
      </div>
      <div
        class="_archiveModalContainer_6def5c"
      >
        <div
          class="_column_6def5c"
        >
          <h3
            class="_header_6def5c"
          >
            Aktuell
          </h3>
          <ul
            class="_listContainer_6def5c"
          />
        </div>
        <div
          class="_column_6def5c"
        >
          <h3
            class="_header_6def5c"
          >
            Alt
          </h3>
          <ul
            class="_listContainer_6def5c"
          />
        </div>
        <div
          class="_removalContainer_6def5c"
        >
          <img
            class="_removalImage_6def5c"
            src="/src/assets/delete-icon.svg"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`modalManager > can open the import modal 1`] = `
<div
  id="modal-container"
>
  <div
    class="_container_0360d7"
  >
    <div
      class="_content_0360d7"
    >
      <div
        class="_header_0360d7"
      >
        <h2
          class="_headerText_0360d7"
        >
          Import
        </h2>
        <button
          class="_button_7c1f96 _closeButton_0360d7"
          data-test="modalCloseButton"
        >
          <img
            class="_icon_7c1f96"
            src="/src/assets/close-icon.svg"
          />
        </button>
      </div>
      <div
        class="_importModalContainer_e2444d"
      >
        <textarea
          class="_importTextarea_e2444d"
          data-test="modalTextarea"
          placeholder="Neue Einträge zeilenweise einfügen..."
        />
        <div
          class="_importButtonWrapper_e2444d"
        >
          <button
            class="_importButton_e2444d"
            data-test="modalImportButton"
          >
            Importieren
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`modalManager > can open the spinResult modal 1`] = `
<div
  id="modal-container"
>
  <div
    class="_container_0360d7"
  >
    <div
      class="_content_0360d7"
    >
      <div
        class="_header_0360d7"
      >
        <h2
          class="_headerText_0360d7"
        >
          Ergebnis:
        </h2>
        <button
          class="_button_7c1f96 _closeButton_0360d7"
          data-test="modalCloseButton"
        >
          <img
            class="_icon_7c1f96"
            src="/src/assets/close-icon.svg"
          />
        </button>
      </div>
      <div
        class="_resultContainer_7299e4"
      >
        <span
          class="_resultLabel_7299e4"
        >
          Test
        </span>
      </div>
    </div>
  </div>
</div>
`;
